--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ejs": "^2.3.1",
     "ejs-locals": "^1.0.2",
     "express": "~4.6.1",
+    "googlemaps": "^0.1.20",
     "method-override": "~2.1.1",
     "mongoose": "~3.8.13",
     "morgan": "~1.1.1",
